bug fixes 1. deleted study icon color change on selected 2. added skip to last option in institution add page 3. upload image size is already done

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1274,3 +1274,8 @@ header.ant-layout-header.subheader {
   justify-content: flex-end;
   gap: 10px;
 }
+
+li[data-menu-id$="deletedStudy"][class~="ant-menu-item-selected"]>svg{
+
+  color:white !important;
+}
