Update Report Editor style

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1248,7 +1248,7 @@
 
 .report-editor-div {
   .ck-editor__main {
-    max-height: 420px !important;
+    max-height: 53vh !important;
     overflow-y: auto !important;
   }
 
