bug fixes 1. added upload size limit everywhere in dragger 2. changed color of study export

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2470,3 +2470,16 @@ form.ant-form .ant-form-item .ant-form-item-label label{
   width: 10rem;
   padding: 0.4rem !important;
 }
+
+.ant-btn-export{
+  background-color: #00ad68 !important;
+  color:white !important; 
+  font-weight: 500 !important;
+  font-size: 1rem;
+}
+
+.ant-btn-export:hover{
+  border-color: #00ad68 !important;
+  background-color: white !important;
+  color:#00ad68 !important;
+}
