Update Static count information css

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2546,6 +2546,10 @@ form.ant-form .ant-form-item .ant-form-item-label label{
   font-size: 15px !important;
 }
 
+:where(.css-15rg2km).ant-statistic .ant-statistic-content{
+  font-size: 15px !important;
+}
+
 .ant-btn-export{
   background-color: #00ad68 !important;
   color:white !important; 
