Update Study table Changes

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2562,3 +2562,7 @@ form.ant-form .ant-form-item .ant-form-item-label label{
   background-color: white !important;
   color:#00ad68 !important;
 }
+
+.ant-tag{
+  border-radius: 10px !important;
+}
