Update Study more details information modal

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2577,3 +2577,7 @@ form.ant-form .ant-form-item .ant-form-item-label label{
 .skip-to-last-option:hover{
   color: #003b55;
 }
+
+.study-more-details .ant-modal-content{
+  height: 93vh !important;
+}
