--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -284,7 +284,7 @@ form.ant-form {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100%  ;
+    height: 90vh ;
     ul.ant-menu {
       li.ant-menu-item {
         span.anticon {
