Update Add Institution component

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2589,3 +2589,12 @@ form.ant-form .ant-form-item .ant-form-item-label label{
   flex-direction: row;
   height: 90vh;
 }
+
+// Add Institution reporting charge input information 
+
+.Add_institution_charge_input_layout{
+  display: flex;
+  flex-direction:row;
+  padding-top: 0.80rem;
+  padding-bottom: 0.80rem;
+}
