Add OHIF viewer and Radvia viewer option in bottom option icon modal

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2308,8 +2308,11 @@ margin-top: 8px !important;
 .ohif-viwer-option-icon{
   height: 16px;
   width: 16px;
-  margin-top: auto;
-  margin-bottom: auto;
+}
+
+.Weasis-viewer-option-icon{
+  height: 20px;
+  width: 20px;
 }
 
 .Advance-view-report-layout .ant-card-body{
