--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2609,3 +2609,33 @@ form.ant-form .ant-form-item .ant-form-item-label label{
   height: 35vh !important;
   overflow-y: hidden !important;
 }
+
+.Report-reference-document{
+  margin-bottom: 0.8rem;
+  margin-top: 0.5rem;
+  margin-right: 0.8rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.Reference-option-button-layout{
+  justify-content: right;
+  text-align: right;
+  margin-bottom: -1.2rem;
+  z-index: 100;
+}
+
+.Reference-download-option-button{
+  margin-bottom: 0.7rem;
+  margin-left: auto;
+  margin-left: 0.5rem;
+  z-index: 100;
+}
+
+.Reference-image{
+  height: 5rem !important;
+}
+
+// .ant-upload-list-item{
+//   float: left !important;
+// }
