Update Study more details information modal

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2636,6 +2636,6 @@ form.ant-form .ant-form-item .ant-form-item-label label{
   height: 5rem !important;
 }
 
-// .ant-upload-list-item{
-//   float: left !important;
-// }
+.study-more-details .ant-modal-body{
+  max-height: 87vh !important;
+}
