study audit height changed

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1344,7 +1344,7 @@
 }
 
 .study-modal-patient-audit-info-layout{
-  height: max-content;
+  height:14rem;
   overflow-y: auto;
   overflow-x: hidden;
 }
