Add Insitution functionality update

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2669,3 +2669,7 @@ form.ant-form .ant-form-item .ant-form-item-label label{
   max-height: 87vh !important ; 
   overflow-y: hidden;
 }
+
+.ant-table-row-expand-icon{
+  display: none !important;
+}
