--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1430,11 +1430,36 @@
   text-align: center;
 }
 
-.Study-table .ant-table-cell{
-  padding-top: 0.8rem !important;
-  padding-bottom: 0.8rem !important;
+
+.Study-table {
+
+  .ant-table-thead{
+    .ant-table-cell{
+      text-align: center !important;
+    }
+  }
+
+  .ant-table{
+    font-size: 13px !important;
+  }
+
+  .ant-statistic-content-value{
+    font-size: 13px !important;
+  }
+
+  .study-table-chat-option{
+    font-size: 16px !important;
+  }
+
+  
 }
 
+.action-icon{
+  margin-left: 0.2rem !important;
+  margin-right: 0.2rem !important;
+  font-size: 17px;
+}
+  
 // ========= Chat Module css ============ // 
 
 .chat-module-div {
@@ -2337,13 +2362,15 @@ margin-top: 8px !important;
 
 
 .ohif-viwer-option-icon{
-  height: 16px;
-  width: 16px;
+  // margin-top: 3px;
+  height: 14px;
+  width: 14px;
 }
 
 .Weasis-viewer-option-icon{
-  height: 20px;
-  width: 20px;
+  height: 17px;
+  width: 17px;
+  margin-left: 4px;
 }
 
 .Advance-view-report-layout .ant-card-body{
