Update Study table page

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2706,3 +2706,44 @@ form.ant-form .ant-form-item .ant-form-item-label label{
 .ant-table-row-expand-icon{
   display: none !important;
 }
+
+.study-quick-filter-form{
+  
+  .ant-input{
+    background-color: #ffffff !important;
+  }
+
+  .ant-input::placeholder{
+    color: rgb(98, 98, 98) !important;
+  }
+
+  .ant-select{
+    .ant-select-selector{
+      background-color:  #ffffff !important;
+    }
+  }
+
+  .ant-select-selection-placeholder{
+    color: rgb(98, 98, 98)  !important;
+  }
+  
+  .quick-filter-date-picker{
+    .ant-picker{
+      background-color: #ffffff !important;
+    }
+  }
+
+  #created_at__startswith::placeholder{
+    color: rgb(98, 98, 98)  !important  ;
+  }
+
+  .ant-form-item-control-input{
+    margin-right: 1rem !important;
+  }
+  
+}
+
+.quick-filter-selected{
+  background-color: #ff4a4a !important;
+  color: #FFFFFF !important;
+}
