--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1279,3 +1279,10 @@ li[data-menu-id$="deletedStudy"][class~="ant-menu-item-selected"]>svg{
 
   color:white !important;
 }
+
+.study-quick-filter-form{
+  .ant-picker{
+    background-color:  #ffffff !important;
+
+  }
+}
