Update header button design

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2747,3 +2747,7 @@ form.ant-form .ant-form-item .ant-form-item-label label{
   background-color: #ff4a4a !important;
   color: #FFFFFF !important;
 }
+
+.header-secondary-option-button{
+  background-color: #3d5a80 !important;
+}
