remaining changes done of scrollbar

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1344,7 +1344,7 @@
 }
 
 .study-modal-patient-audit-info-layout{
-  height:14rem;
+  height:12rem;
   overflow-y: auto;
   overflow-x: hidden;
 }
@@ -1355,7 +1355,7 @@
 }
 
 .Study-modal-input-option-division {
-  padding-top: 1rem;
+  // padding-top: 0.5rem;
   border-left: 1px solid #c4c4c4;
   margin-top: 1rem;
   overflow-x: auto;
