--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1433,6 +1433,10 @@
 
 .Study-table {
 
+  .ant-table-row{
+    background-color: #fefefe !important;
+  }
+
   .ant-table-thead{
     .ant-table-cell{
       text-align: center !important;
@@ -2760,3 +2764,4 @@ form.ant-form .ant-form-item .ant-form-item-label label{
   line-height: 45px;
   transition: all 0.3s,visibility 0s;
 }
+
