Update header options in Study page

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2785,3 +2785,7 @@ form.ant-form .ant-form-item .ant-form-item-label label{
   height: 0px ;
 }
 
+.breadcrumb-div{
+  height: 0px  !important;
+  display: none !important;
+}
