--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -324,7 +324,9 @@ form.ant-form {
 
 .site-layout-background {
   background: transparent;
+  padding-top: 1rem;
 }
+
 
 .sidemenu {
   margin-top: 20px;
