Update table column

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1456,7 +1456,7 @@
   }
 
   .ant-table-row:nth-child(odd) {
-    background-color: #f4f4f4 !important; /* Set background color for odd rows */
+    background-color: #e2e2e2 !important; /* Set background color for odd rows */
   }
 
   .ant-table-tbody > tr:hover > td {
