Update Header button

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -324,7 +324,8 @@ form.ant-form {
 
 .site-layout-background {
   background: transparent;
-  padding-top: 1rem;
+  // padding-top: -1rem;
+  margin-top: -0.50rem;
 }
 
 
