--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -325,7 +325,7 @@ form.ant-form {
 .site-layout-background {
   background: transparent;
   // padding-top: -1rem;
-  margin-top: -0.50rem;
+  // margin-top: -0.50rem;
 }
 
 
