Update select item functionality

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2789,3 +2789,7 @@ form.ant-form .ant-form-item .ant-form-item-label label{
 //   height: 0px  !important;
 //   display: none !important;
 // }
+
+.ant-select-selection-item{
+  margin-top: 0px !important;
+}
