Update study table

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1456,7 +1456,7 @@
   }
 
   .ant-table-row:nth-child(odd) {
-    background-color: #e2e2e2 !important; /* Set background color for odd rows */
+    background-color: #f2f2f2 !important; /* Set background color for odd rows */
   }
 
   .ant-table-tbody > tr:hover > td {
@@ -2777,7 +2777,7 @@ form.ant-form .ant-form-item .ant-form-item-label label{
 }
 
 .patient_name_row{
-  background-color: rgb(193, 226, 237, 0.5) !important;
+  background-color: rgb(209, 244, 255) !important;
 }
 
 .ant-table-measure-row{
