--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2793,3 +2793,29 @@ form.ant-form .ant-form-item .ant-form-item-label label{
 .ant-select-selection-item{
   margin-top: 10px !important;
 }
+
+.chat-message-notification-layout{
+  .chat-notification{
+    cursor: pointer;
+    padding-top: 0.50rem;
+    padding-bottom: 0.50rem;
+    border-radius: 5px; 
+
+    .ant-list-item-meta-content{
+      margin-top: auto;
+      margin-bottom: auto;
+    }
+    
+    .ant-list-item-meta-description{
+      color: #494949 !important;
+      font-weight: 600 ;
+      justify-content: center;
+      margin-top: auto;
+      margin-bottom: auto;
+    }
+  } 
+
+  .chat-notification:hover{
+    background-color: #f4f4f4;
+  }
+}
