--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2819,3 +2819,9 @@ form.ant-form .ant-form-item .ant-form-item-label label{
     background-color: #f4f4f4;
   }
 }
+
+.breadcumb-option-icon{
+  height: 1rem;
+  width: 1rem;
+
+}
