--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2824,3 +2824,13 @@ form.ant-form .ant-form-item .ant-form-item-label label{
   height: 1rem;
   width: 1rem;
 }
+
+.billing-card-layout{
+
+  .ant-card-body{
+    padding: 0px !important;
+    padding-left: 5px !important;
+    padding-right: 5px !important;
+    padding-top: 10px !important;
+  }
+}
