Update study report icon

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2834,3 +2834,7 @@ form.ant-form .ant-form-item .ant-form-item-label label{
     padding-top: 10px !important;
   }
 }
+
+.study-report-icon{
+  height: 18px;
+}
