Update image height and width in profile image selection on create user time

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2838,3 +2838,8 @@ form.ant-form .ant-form-item .ant-form-item-label label{
 .study-report-icon{
   height: 18px;
 }
+
+.selected-profile-image{
+  height: 4rem !important;
+  width: 9rem !important;
+}
