--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2775,6 +2775,10 @@ form.ant-form .ant-form-item .ant-form-item-label label{
   background-color: #3d5a80 !important;
 }
 
+.header-secondary-option-button:hover{
+  background-color: #547db4 !important;
+}
+
 .study-quick-filter-form :where(.css-dev-only-do-not-override-15rg2km).ant-select-single .ant-select-selector .ant-select-selection-item,.study-quick-filter-form :where(.css-dev-only-do-not-override-15rg2km).ant-select-single .ant-select-selector .ant-select-selection-placeholder {
   // padding: 0;
   line-height: 45px;
