Fixed changes 1. changes in assign study button done 2. added close button in chat ui 3. changed color om hover button of study export button 4. added name input field in study export

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -176,7 +176,7 @@ form.ant-form {
             border: transparent;
             border-radius: 10px !important;
             min-height: 48px;
-            width: 100%;
+            width: 100% !important; 
 
             &:focus {
               box-shadow: none;
