--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1930,9 +1930,8 @@
 .report-summary-wrapper {
   // padding: 0.5rem;
   width: 100%;
-  height: 100vh;
-  // backdrop-filter: blur(16px) saturate(135%);
-  // -webkit-backdrop-filter: blur(16px) saturate(135%);
+  height: 98vh;
+  max-height: 98vh;
   background-color: rgba(238, 238, 238, 0.88);
   border-radius: 10px;
   box-shadow: 0 0 13px 1px rgba(0, 0, 0, 0.15);
@@ -1977,6 +1976,17 @@
   align-items: center;
   width: 100%;
   height: max-content;
+
+}
+
+.report-patient-details-card{
+  .ant-card-body{
+    padding: 0rem !important;
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+    padding-top: 0.50rem !important;
+    padding-bottom: 0.50rem !important;
+  }
 }
 
 .report-summary-patient-details>div {
@@ -2053,6 +2063,14 @@
 
 .bold-text {
   font-weight: 600;
+  font-size: 0.95rem;
+  width: 35%;
+  padding-top: 0.70rem; 
+}
+
+.report-patient-data{
+  font-size: 0.95rem;
+  padding-top: 0.70rem;
 }
 
 .red-color-button {
@@ -2969,4 +2987,26 @@ form.ant-form .ant-form-item .ant-form-item-label label{
   span{
     color: red !important;
   }
+}
+
+// Report summary page related css 
+
+.patient-details-title{
+  font-size: 0.95rem;
+}
+
+.patient-report-info-table{
+  width: 100%;
+  tr{
+    padding-top: 1rem;
+  }
+}
+
+.report-back-option-button{
+  background-color: #3d5a80 !important;
+}
+
+.report-back-option-button:hover{
+  background-color: #0e386e !important;
+
 }
