Add dicom image upload option form dicom uploader

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3115,3 +3115,7 @@ form.ant-form .ant-form-item .ant-form-item-label label{
   
   }
 }
+
+.anticon-cloud-upload{
+  font-size: 17px !important;
+}
