--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3117,5 +3117,10 @@ form.ant-form .ant-form-item .ant-form-item-label label{
 }
 
 .anticon-cloud-upload{
-  font-size: 17px !important;
+  font-size: 16px !important;
+}
+
+
+.anticon-history{
+  font-size: 15px !important;
 }
