--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3124,3 +3124,12 @@ form.ant-form .ant-form-item .ant-form-item-label label{
 .anticon-history{
   font-size: 15px !important;
 }
+
+// total page count information label 
+.total_page_info_title{
+  font-size: 1rem;
+  font-weight: 600;
+  color: #000000;
+  margin-top: 2px;
+  margin-right: 10px;
+}
