Set Patientid and Patient column to first in advance report option

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3175,3 +3175,9 @@ form.ant-form .ant-form-item .ant-form-item-label label{
 .clear-all-image-option-button:hover{
   background-color: rgb(255, 62, 62) !important;
 }
+
+.ck-content .table table {
+  width: 70% !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
