--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -945,7 +945,7 @@
   }
 
   .ant-card-body {
-    min-height: calc(100vh - 200px);
+    min-height: calc(100vh - 185px);
   }
 }
 
@@ -3177,7 +3177,19 @@ form.ant-form .ant-form-item .ant-form-item-label label{
 }
 
 .ck-content .table table {
-  width: 70% !important;
+  width: 80% !important;
   margin-left: auto !important;
   margin-right: auto !important;
+}
+
+
+.ck-content .table table td{
+  padding: 0.1rem !important;
+  padding-left: 0.4rem !important;
+}
+
+.ck-table-bogus-paragraph{
+  span{
+    font-size: 0.80rem !important;
+  }
 }
