--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3201,3 +3201,12 @@ form.ant-form .ant-form-item .ant-form-item-label label{
     margin-top: 2px !important;
   }
 }
+
+.reupload-option-icon{
+  height: 22px;
+  width: 22px;
+  cursor: pointer;
+  margin-top: 2px;
+  margin-left: 5px;
+  margin-bottom: auto;
+}
