--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3210,3 +3210,28 @@ form.ant-form .ant-form-item .ant-form-item-label label{
   margin-left: 5px;
   margin-bottom: auto;
 }
+
+.manual-entry-wrapper{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  overflow-x: auto;
+  justify-content: center;
+  align-items: center;
+}
+
+.manual-entry{
+  width: 70%;
+  border: 2px dotted gray;
+  border-radius: 1rem;
+}
+
+.header{
+  font-size:1.4rem;
+
+}
+
+
+.p-2{
+  padding:1rem;
+}
