added manual entry screen

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3235,3 +3235,8 @@ form.ant-form .ant-form-item .ant-form-item-label label{
 .p-2{
   padding:1rem;
 }
+
+.add-image-series{
+  min-height: 20rem !important;
+  
+}
