--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1077,7 +1077,7 @@
 }
 
 .ant-modal-header {
-  padding-top: 10px;
+  padding-top: 10px !important;
   background-color: #33b3e9 !important;
   padding-left: 10px !important;
   padding-bottom: 10px !important;
