Insert modality selection on assign study functionality

--- a/src/pages/ManualEntry/index.scss
+++ b/src/pages/ManualEntry/index.scss
@@ -40,3 +40,12 @@
         margin-top: 0.60rem !important;
     }
 }
+
+
+.clinical-history-modality-selection{
+    .ant-select-selector{
+        .ant-select-selection-item{
+            padding-top: 7px;
+        }
+    }
+}
