--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2432,8 +2432,8 @@ label[for="study_description"]{
 }
 
 .modality-card-wrapper{
-  display:flex;
-  flex-direction:row;
+  // display:flex;
+  // flex-direction:row;
   flex-wrap: wrap;
   overflow-y: auto;
   height:58vh;
@@ -2441,30 +2441,34 @@ label[for="study_description"]{
   align-items:center;
   justify-content: center;
   margin-top: 0.30rem;
-  width: fit-content;
+  // width: fit-content;
   margin-left: auto;
   margin-right: auto;
+  width: 100%;
+  background-color: #fcfcfc;
+  padding-left: 1%;
+  padding-right: 1%;
 
-  .ant-card-head{
-    background-color: #33b3e9;
-    color: white;
-    height: fit-content;
-  }   
+  // .ant-card-head{
+  //   background-color: #33b3e9;
+  //   color: white;
+  //   height: fit-content;
+  // }   
 
-  .particular-modality-info-division{
-    margin-top: 1rem !important;
-    margin-right: 1rem !important;
+  // .particular-modality-info-division{
+  //   margin-top: 1rem !important;
+  //   margin-right: 1rem !important;
     
-    .ant-card-body{
-      padding: 0.70rem !important;
-      padding-left: 1.5rem !important;
-      padding-right: 1.5rem !important;
-    }
+  //   .ant-card-body{
+  //     padding: 0.70rem !important;
+  //     padding-left: 1.5rem !important;
+  //     padding-right: 1.5rem !important;
+  //   }
 
-    .particular-modality-charges-title{
-      margin-bottom: 0.20rem;
-    }
-  }
+  //   .particular-modality-charges-title{
+  //     margin-bottom: 0.20rem;
+  //   }
+  // }
 }
 
 .clinical-history-modal{
@@ -3254,4 +3258,12 @@ form.ant-form .ant-form-item .ant-form-item-label label{
 
 .institution-checkbox .ant-checkbox-checked .ant-checkbox-inner::after {
   border-color: #1677ff !important; /* Custom checkmark color */
+}
+
+.institution-modality-table{
+  .ant-table-tbody{
+    .ant-table-row{
+      border-left: 1px solid red;
+    }
+  }
 }
