--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -928,7 +928,7 @@
 }
 
 .report-details-div {
-  height: calc(100vh - 250px);
+  height: calc(100vh - 150px);
   overflow-y: auto;
 }
 
@@ -3307,4 +3307,49 @@ form.ant-form .ant-form-item .ant-form-item-label label{
     background-color: #fff;
     padding: 15px;
   }
+}
+
+.patient-info-drawer{
+  .ant-drawer-body{
+    padding-left: 15px !important;
+    padding-right: 15px !important;
+    padding-top: 8px !important;
+  }
+}
+
+.drawer-title{
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.drawer-info-main-div{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+
+.drawer-info-div{
+  // display: flex;
+  // flex-direction: row;
+  border: 1px solid #e9e9e9;
+  margin-top: 8px;
+  width: 48%;
+  border-radius: 4px;
+}
+
+.drawer-info-title{
+  // background-color: #efefef;
+  padding-top: 6px;
+  // padding-bottom: 10px;
+  padding-left: 8px;
+  padding-right: 8px;
+  font-weight: 600;
+}
+
+.drawer-info-data{
+  // padding-top: 10px;
+  padding-bottom: 6px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
