--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1385,11 +1385,12 @@
 
 .Report-modal-option-button {
   width: 80%;
-  margin-top: 0.50rem;
+  margin-top: 1rem;
   margin-bottom: 0.5rem;
   padding-bottom: 0.4rem;
   margin-left: 10%;
 }
+
 
 .Report-modal-option-button span {
   font-size: 0.90rem;
@@ -1441,6 +1442,7 @@
 
   .ant-table-row{
     background-color: #fefefe !important;
+    cursor: pointer;
   }
 
   .ant-table-thead{
@@ -1462,7 +1464,7 @@
   }
 
   .ant-table-row:nth-child(odd) {
-    background-color: #f2f2f2 !important; /* Set background color for odd rows */
+    background-color: #eeeeee !important; /* Set background color for odd rows */
   }
 
   .ant-table-tbody > tr:hover > td {
@@ -2433,16 +2435,17 @@ label[for="study_description"]{
   line-height:33px !important;
 }
 
-.report-option-div{
+.report-option-div {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 0; /* Positions it at the top */
+  left: 55%; /* Centers it horizontally */
+  transform: translateX(-50%); /* Adjusts the division to be centered */
   z-index: 1000; /* Ensures it stays on top */
   background-color: #2F2F2F90; /* Background color to distinguish from the page */
   padding: 1rem; /* Optional padding */
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Optional shadow */
-  padding-top: 0.80rem;
-  padding-right: 0.8rem;
+  padding-top: 0.70rem;
+  padding-right: 0.70rem;
   padding-left: 0.8rem;
   cursor: move;
   border-radius: 5px;
@@ -3068,6 +3071,9 @@ form.ant-form .ant-form-item .ant-form-item-label label{
   width: 90% ;
   margin-left: auto;
   margin-right: auto;
+  background-color: #efefef;
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
 }
 
 
