--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3359,3 +3359,9 @@ form.ant-form .ant-form-item .ant-form-item-label label{
   padding-left: 8px;
   padding-right: 8px;
 }
+
+.image-manual-upload{
+  .ant-modal-header{
+    background-color: #3d5a80 !important;
+  }
+}
