--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3369,3 +3369,19 @@ form.ant-form .ant-form-item .ant-form-item-label label{
     background-color: #3d5a80 !important;
   }
 }
+
+.chat-notification-div{
+  padding: 8px !important; 
+  padding-top: 12px !important;
+  padding-bottom: 12px !important;
+  width: 300px !important;
+
+  .ant-notification-notice-message{
+    font-size: 14px !important ;
+    font-weight: 600; 
+  }
+
+  .ant-notification-notice-description{
+    font-size: 12px !important;
+  }
+}
