--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1964,8 +1964,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 90vw;
-  ;
+  width: 98%;
   background-color: white;
   font-size: 1.3rem;
   padding: 0.7rem 0;
