Update reporting module page design

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2983,19 +2983,19 @@ form.ant-form .ant-form-item .ant-form-item-label label{
   margin-bottom: auto;
 }
 
-.ohif-basic-viewer-option{
-  background-color: #FFFFFF !important;
-  span{
-    color: #FFA500 !important;
-  }
-}
+// .ohif-basic-viewer-option{
+  // background-color: #FFFFFF !important;
+  // span{
+  //   color: #FFA500 !important;
+  // }
+// }
 
-.ohif-basic-viewer-option:hover{
-  background-color: #FFA500 !important;
-  span{
-    color: #FFFFFF !important;
-  }
-}
+// .ohif-basic-viewer-option:hover{
+//   background-color: #FFA500 !important;
+//   span{
+//     color: #FFFFFF !important;
+//   }
+// }
 
 .kiware-viewer-option{
   background-color:  #FFFFFF !important;
