Update support details functionality and Quick assign related functionality

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3395,3 +3395,18 @@ form.ant-form .ant-form-item .ant-form-item-label label{
 .ant-table-cell{
   color: #000000 !important;
 }
+
+.support-details-main-div{
+  max-width: 600px;
+  gap: 6px;  
+}
+
+.support-information-icon{
+  font-size: 18px;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.support-contact{
+  margin-left: 5px;
+}
